<resources>
    <string name="app_name">货物清单</string>
    <string name="delete">删除当前产品</string>
    <string name="cannotQuery">无法查询未知的 Uri ：</string>
    <string name="unKnownUri">无法识别 Uri，来自 “getType” ：</string>
    <string name="insertError">添加目标出错</string>
    <string name="insertNotSupported">插入不受支持 ：</string>
    <string name="goodsIdNull">goodsId is null</string>
    <string name="deleteError">删除过程中出错 :</string>
    <string name="nameIsNull">name is null</string>
    <string name="supplierIsNull">supplier is null</string>
    <string name="numberIsNull">phoneNumber is null</string>
    <string name="transportIsNull">transport is null</string>
    <string name="quantityIsNull">quantity is null</string>
    <string name="priceIsNull">price is null</string>
    <string name="timeIsNull">time is null</string>
    <string name="updateError">更新出错 ：</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="sellTime">出售日期</string>
    <string name="sellQuantity">出售数量</string>
    <string name="sellPrice">出售价格</string>
    <string name="supplier">供应商</string>
    <string name="phoneNumber">电话号码</string>
    <string name="quantity">当前数量</string>
    <string name="price">进货价格</string>
    <string name="remarks">备注</string>
    <string name="transport">运输方式</string>
    <string name="land">陆运</string>
    <string name="air">空运</string>
    <string name="sea">海运</string>
    <string name="todo">null</string>
    <string name="name">产品名称</string>
    <string name="nameTextIsNull">产品名称输入有误</string>
    <string name="supplierTextIsNull">供应商输入有误</string>
    <string name="phoneNumberTextIsNull">联系方式输入有误</string>
    <string name="quantityTextIsNull">当前数量输入有误</string>
    <string name="priceTextIsNull">进货价格输入有误</string>
    <string name="insertTextError">添加出错</string>
    <string name="insertTextDone">已添加成功</string>
    <string name="updateTextError">更新出错</string>
    <string name="updateTextDone">已成功更新</string>
    <string name="deleteDone">删除成功</string>
    <string name="buyText">订购</string>
    <string name="sellText">出售</string>
    <string name="sellError">计算过程中出错</string>
    <string name="sellDone">已出售，数量减 1</string>
    <string name="sellQuantityIsNull">sell_quantity is null</string>
    <string name="sellQuantityString">已出售数量：</string>
    <string name="sellPriceIsNull">sell_price is null</string>
    <string name="imageIsNull">image is null</string>
    <string name="updateImageError">保存图片过程出错</string>
    <string name="time">出售时间</string>
    <string name="gIdTwoZero">GID00%1$d</string>
    <string name="gIdOneZero">GID0%1$d</string>
    <string name="gIdZeroZero">GID%1$d</string>
    <string name="sellOne">已经售出 1</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sellAboutText">出售历史</string>
    <string name="quantityIsZero">产品数量为零</string>
    <string name="diySellString">自定义出售</string>
    <string name="sellHistoryString">出售历史记录</string>
    <string name="sellString">出售</string>

    <string name="remainingString">剩余数量:%1$d</string>
    <string name="pricingString">当前定价:%1$d</string>
    <string name="supplierList_main">供应商：%1$s</string>
    <string name="remainingList_main">剩余数量：%1$d</string>
    <string name="pricingList_main">产品定价：%1$d</string>
    <string name="noHasHistory">暂无出售历史记录</string>
    <string name="editTextIsNull">出售数量或出售价格输入有误</string>
    <string name="deleteOrNot">是否删除当前的产品</string>
    <string name="yesDelete">是的，删除</string>
    <string name="no">不了</string>
    <string name="saveOrNot">有未保存的更改，是否直接退出</string>
    <string name="noSave">直接退出</string>
    <string name="Continue">继续编辑</string>
    <string name="addGoods">添加产品</string>
    <string name="infoGoods">产品信息</string>
    <string name="editGoods">编辑产品</string>
    <string name="noHasGoodsList">暂无任何产品数据</string>
    <string name="writeOverflow">输入的数值超出剩余数量</string>
    <string name="soldOut">该产品已无存货</string>
    <string name="canNoBeZero">设置出售数量与价格不能为 0</string>
</resources>
