<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/supplier"
        style="@style/text_title"
        android:text="@string/supplier" />

    <TextView
        android:id="@+id/phone_number"
        style="@style/text_title"
        android:text="@string/phoneNumber" />

    <TextView
        android:id="@+id/quantity"
        style="@style/text_title"
        android:text="@string/quantity" />

    <TextView
        android:id="@+id/price"
        style="@style/text_title"
        android:text="@string/price" />

    <TextView
        android:id="@+id/transport"
        style="@style/text_title"
        android:text="@string/transport" />


</LinearLayout>