<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/layout_style">

    <TextView
        android:id="@+id/supplier_text"
        style="@style/text_text"
        tools:text="@string/name"/>

    <TextView
        android:id="@+id/phone_number_text"
        style="@style/text_text"
        tools:text="@string/phoneNumber" />

    <TextView
        android:id="@+id/quantity_text"
        style="@style/text_text"
        tools:text="@string/quantity"/>

    <TextView
        android:id="@+id/price_text"
        style="@style/text_text"
        tools:text="@string/price"/>

    <TextView
        android:id="@+id/transport_text"
        style="@style/text_text"
        tools:text="@string/transport" />

</LinearLayout>