<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/edit_quantity_about"
        android:layout_weight="2"
        style="@style/list_history"
        tools:text="@string/sellQuantity"/>

    <TextView
        android:id="@+id/edit_price_about"
        android:layout_weight="2"
        style="@style/list_history"
        tools:text="@string/sellPrice"/>

    <TextView
        android:id="@+id/edit_time_about"
        android:layout_weight="4"
        style="@style/list_history"
        tools:text="@string/sellTime"/>

</LinearLayout>
