<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_small">

    <TextView
        android:id="@+id/no_has_history_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noHasHistory"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/margin_large"/>

    <LinearLayout
        android:id="@+id/history_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/list_history_title"
            android:layout_weight="2"
            android:text="@string/sellQuantity" />

        <TextView
            style="@style/list_history_title"
            android:layout_weight="2"
            android:text="@string/sellPrice" />

        <TextView
            style="@style/list_history_title"
            android:layout_weight="4"
            android:text="@string/sellTime" />

    </LinearLayout>

    <ListView
        android:id="@+id/about_sell_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/history_title_text"
        tools:listitem="@layout/item_sell_list" />

</RelativeLayout>