<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="@dimen/margin_medium"
    android:paddingStart="@dimen/margin_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/quantity_text"
            style="@style/diy_write_text"
            android:text="@string/sellQuantity" />

        <EditText
            android:id="@+id/diy_quantity_edit"
            style="@style/diy_write_edit"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/price_text"
            style="@style/diy_write_text"
            android:text="@string/sellPrice" />

        <EditText
            android:id="@+id/diy_price_edit"
            style="@style/diy_write_edit"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/button_diy_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/sellString"
        android:layout_gravity="right"/>

</LinearLayout>